# PatchWatch

./: .env.example  README.md  docker-compose.yml  move.sh  requirements.txt  update_imports.sh
app/: __init__.py  auth.py  config.py  database.py  main.py  models.py
app/routers/: auth.py  reports.py  repos.py  scan.py  webhook.py
app/services/: github_service.py  memory.py  report_generator.py  scanner.py
backend/: pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/api/: __init__.py  auth.py  reports.py  repos.py  scan.py  webhook.py
backend/src/core/: auth.py  config.py
backend/src/database/: session.py
backend/src/models/: domain.py  schemas.py
backend/src/services/: __init__.py  github_service.py  memory.py  scanner.py
backend/src/utils/: __init__.py  diff_parser.py
frontend/: .gitignore  package-lock.json
frontend/.wrangler/tmp/pages-G8kJTL/: bundledWorker-0.1026846826400134.mjs  bundledWorker-0.1026846826400134.mjs.map
frontend/.wrangler/tmp/pages-G8kJTL/__next-on-pages-dist__/functions/: _not-found.func.js  index.func.js  reports.func.js  repos.func.js  scan.func.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/auth/callback/: page.tsx
frontend/src/app/reports/: page.tsx
frontend/src/app/reports/[id]/: page.tsx
frontend/src/app/repos/: page.tsx
frontend/src/app/scan/: page.tsx
frontend/src/components/: RenderWarningToast.tsx
frontend/src/components/ui/: hero-ascii-one.tsx
frontend/src/lib/: api.ts  auth-context.tsx
(+2 files in other folders)
