[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patchwatch-backend"
version = "1.0.0"
description = "AI-powered security vulnerability scanner for GitHub commits."
authors = [
    { name = "PatchWatch Team" }
]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.21.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.9.0",
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
    "langgraph>=0.4.0",
    "python-jose[cryptography]>=3.3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.0.0"
]
